--- a/package.json
+++ b/package.json
@@ -3,11 +3,21 @@
   "version": "1.0.0",
   "description": "A minter and protocol for inscriptions on Dogecoin",
   "main": "doginals.js",
-  "author": "apezord",
+  "author": "xtgz",
   "license": "MIT",
   "bin": {
     "doginals": "doginals.js"
   },
+  "author": "xtgz",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/xtgz/Drc-20/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/xtgz/Drc-20.git"
+  },  
+  "homepage": "https://github.com/xtgz/Drc-20#README",
   "dependencies": {
     "axios": "^1.3.4",
     "bitcore-lib-doge": "^8.25.46",
