--- a/package.json
+++ b/package.json
@@ -2,22 +2,19 @@
   "name": "doginals",
   "version": "1.0.0",
   "description": "A minter and protocol for inscriptions on Dogecoin",
-  "main": "doginals.js",
   "author": "xtgz",
-  "license": "ISC",
-  "bin": {
-    "doginals": "doginals.js"
-  },
+  "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/xtgz/Drc-20.git"
-  },  
-  "homepage": "https://github.com/xtgz/Drc-20#README",
+    "url": "https://github.com/xtgz/Drc-20"
+  },
+  "main": "doginals.js",
   "dependencies": {
     "axios": "^1.3.4",
     "bitcore-lib-doge": "^8.25.46",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mime-types": "^2.1.35"
+    "lodash": "^4.17.21"
   }
 }
