--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "axios": "^1.3.4",
     "doginals": "1.0.0",
-    "bitcore-lib-doge"; "^8.25.46",
+    "bitcore-lib-doge": "^8.25.46",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mime-types": "^2.1.35",
