--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "main": "doginals.js",
   "dependencies": {
     "axios": "^1.3.4",
-    "doginals": "1.0.0",
+    "doginals": "^1.0.0",
     "bitcore-lib-doge": "^8.25.46",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
