--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/xtgz/Drc-20"
+    "url": "https://github.com/xtgz/doginals"
   },
   "main": "doginals.js",
   "dependencies": {
