--- a/package.json
+++ b/package.json
@@ -99,6 +99,11 @@
         "@nextcloud/eslint-config": "^8.3.0",
         "@nextcloud/eslint-plugin": "^2.1.0",
         "@types/jest": "^29.5.12",
+        "@types/chai": "^4.0.4",
+        "@types/mocha": "^2.2.44",
+        "@types/node": "^6.0.92",
+        "chai": "^4.1.2",
+        "mocha": "^4.0.1",
         "@vue/test-utils": "^1.3.6",
         "@vue/vue2-jest": "^29.2.6",
         "autoprefixer": "^10.4.19",
